# llm-trm

./: .gitignore  CLAUDE.md  COLAB_NOTEBOOK_GUIDE.md  DATASET_SPLIT_GUIDE.md  GSM8K_NOTEBOOK_README.md  README.md  TRAINING_GUIDE.md  colab_notebook.ipynb  doc  pyproject.toml  requirements-dev.txt  requirements.txt  smollm_trm_colab.ipynb  smollm_trm_integration.py  train_lightning.py  train_notebook.ipynb
.github/workflows/: ci.yml
data/hidden_pairs/: datagen_config.json
examples/: __init__.py  train_smollm.py  train_standalone.py
papers/deepseek-v3.2/: commands.tex  main.bib  main.tex
papers/deepseek-v3.2/sections/: 00abs_new.tex  01-0-intro.tex  01-method.tex  02-post.tex  03-seach-agent.tex  05-thinking-with-tool.tex  06-high.tex  appendix.tex
papers/deepseek-v3.2/tables/: eval_main.tex  nonthink.tex  synthesis-eval.tex
papers/less-is-more-TRM/: icml2025.sty  paper.bbl  paper.tex
scripts/: benchmark.py  push_to_hub.py
src/: __init__.py
src/evaluation/: __init__.py  aime.py  gsm8k.py
src/integration/: __init__.py  smollm.py
src/models/: MODELS.md  __init__.py  compression.py  inference.py  smollm.py  trm.py
src/train/: TRAINING.md  __init__.py  phase1_compressor.py  phase2_datagen.py  phase2_trm.py  phase3_grpo.py
src/trm/: __init__.py  base.py  compression.py
